--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,21 @@
-/*  your css code here. If applicable */
+a{
+	background-color:white;
+	display:inline-block;
+	width:465px;
+	margin: 0 0 0 10px;
+/* 	margin:20px; */
+}
+.all{
+	background-color:#cccccc;
+}
+.player_one{
+background-color:#cccccc;
+}
+.player_two{
+background-color:#cccccc;
+	text-align:center;
+	margin-top:0px;
+}
+h1{
+	text-align:center;
+}
