--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,11 @@
+ul{
+	
+}
 a{
 	background-color:white;
 	display:inline-block;
 	width:400px;
+	text-decoration: none;
 	margin: 0 0 0 10px;
 /* 	margin:20px; */
 }
@@ -12,9 +16,15 @@ a{
 background-color:#cccccc;
 }
 .player_two{
+	padding:0px;
+	border:1px solid black;
 background-color:#cccccc;
 	text-align:center;
-	margin-top:0px;
+	display:inline-block
+}
+img{
+	height:200px;
+	width:200px;
 }
 h2{
 	text-align:center;
