--- a/styles.css
+++ b/styles.css
@@ -16,11 +16,17 @@ a{
 background-color:#cccccc;
 }
 .player_two{
-	padding:0px;
-	border:1px solid black;
-background-color:#cccccc;
+/* 	padding:0px; */
+	border:10px solid white;
+
 	text-align:center;
-	display:inline-block
+	padding:0px;
+	margin:0 100px 5px 100px;
+	display:inline-block;
+	background-color:#cccccc;
+}
+p{
+	text-align:left;
 }
 img{
 	height:200px;
